<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:background="@color/login_bk_color"
        android:focusableInTouchMode="true"
        android:gravity="center"
        tools:context=".ui.auth.login.LoginFragment">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_centerInParent="true"
            android:paddingTop="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingStart="24dp"
                android:paddingEnd="24dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        style="@style/viewParent.headerText.NoMode"
                        android:layout_alignParentStart="true"
                        android:layout_centerVertical="true"
                        android:fontFamily="@font/iran_sans_fanum"
                        android:text="ورود به نامه" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentEnd="true"
                        android:src="@drawable/ic_register_hero" />
                </RelativeLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInputEmail"
                    style="@style/parent"
                    android:layout_marginTop="@dimen/loginViewsMargin">

                    <EditText
                        android:id="@+id/editTextEmail"
                        style="@style/modifiedEditText"
                        android:fontFamily="@font/iran_sans_fanum"
                        android:hint="نام کاربری"
                        android:inputType="textEmailAddress"
                        android:maxLines="1" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInputPassword"
                    style="@style/parent"
                    android:layout_marginTop="@dimen/loginViewsMargin">

                    <EditText
                        android:id="@+id/editTextPassword"
                        style="@style/modifiedEditText"
                        android:fontFamily="@font/iran_sans_fanum"
                        android:hint="پسورد"
                        android:inputType="textPassword"
                        android:maxLines="1" />
                </com.google.android.material.textfield.TextInputLayout>

                <br.com.simplepass.loadingbutton.customViews.CircularProgressButton
                    android:id="@+id/cirLoginButton"
                    style="@style/loginButton"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/loginViewsMargin"
                    android:fontFamily="@font/iran_sans_fanum"
                    android:text="ورود"
                    app:initialCornerAngle="27dp"
                    app:spinning_bar_color="#FFF"
                    app:spinning_bar_padding="6dp"
                    app:spinning_bar_width="4dp" />

                <TextView
                    android:id="@+id/forgotPassword"
                    style="@style/viewParent"
                    android:layout_gravity="end"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/iran_sans_fanum"
                    android:text="رمز عبور خود را قراموش کرده اید؟"
                    android:textColor="@color/primaryTextColor"
                    android:textSize="@dimen/newsMoreTextSize" />

                <TextView
                    android:id="@+id/gotoRegister"
                    style="@style/parent"
                    android:layout_marginTop="@dimen/loginViewsMargin"
                    android:fontFamily="@font/iran_sans_fanum"
                    android:text="تازه واردی؟ حساب بساز"
                    android:textAlignment="center"
                    android:textColor="@color/themeColor"
                    android:textSize="17sp"
                    android:textStyle="bold" />


            </LinearLayout>
        </ScrollView>

        <View
            android:layout_width="11dp"
            android:layout_height="match_parent"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="20dp"
            android:background="@drawable/ic_side_bg" />

        <ImageView
            android:id="@+id/image_gotoRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="11dp"
            android:layout_marginBottom="30dp"
            android:src="@drawable/ic_add_img" />
    </RelativeLayout>

</layout>