...
                            app:initialCornerAngle="27dp"
                            app:spinning_bar_color="#FFF"
                            app:spinning_bar_padding="6dp"
                            app:spinning_bar_width="4dp" />

                        <TextView
                            android:id="@+id/gotoLogin"
                            style="@style/parent"
                            android:layout_marginTop="@dimen/loginViewsMargin"
                            android:fontFamily="@font/iran_sans_fanum"
                            android:text="قبلا عضو شده اید؟"
                            android:textAlignment="center"
                            android:textColor="@color/themeColor"
                            android:textSize="17sp"
                            android:textStyle="bold" />

                    </LinearLayout>
...
